# whitechapel_advice

./: .env  .gitignore  Dockerfile  backup.py  compose.yaml
WhitechapelAdviceSpringBackend/: .dockerignore  Dockerfile  flyway.conf  pom.xml
court_scraper/: entrypoint.sh  main.py  notes.md  pyproject.toml  requirements.txt
court_scraper.egg-info/: SOURCES.txt
court_scraper/court_scraper/db/: models.py
court_scraper/court_scraper/scraper/: court_scraper.py  fetch.py  session.py
court_scraper/court_scraper/scraper/factories/: flavour_1_court_case_factory.py  flavour_2_court_case_factory.py
court_scraper/court_scraper/scraper/flavours/: flavours.py
court_scraper/court_scraper/scraper/parsers/: base.py  entry_page_parser.py  flavour_1_daily_cause_list_parser.py  flavour_2_daily_cause_list_parser.py
court_scraper/court_scraper/utils/: time_converter.py
court_scraper/notebooks/: COURT.ipynb
court_scraper/plans/ArchitecturalDesignRecords/: 001-use-python-for-scraping-java-for-api.md  003-using-bs4.md  004-persisting-all-court-data.md  005-scrape-all_courts.md
court_scraper/test/: conftest.py
court_scraper/test/resources/: brighton.html  daily_cause_list_no_minors.html
court_scraper/test/scraper/: test_daily_cause_parser_and_builder.py
court_scraper/test/scraper/parsers/: test_daily_cause_list_parser.py
nested/: .env.dev  new
nested/court_scraper.egg-info/: PKG-INFO  requires.txt
nested/court_scraper/db/: db_methods.py
nested/court_scraper/utils/: city_set.py
nested/curl/: cookies.txt
nested/plans/: component_diagram.puml  sequence_diagram.puml
nested/plans/ArchitecturalDesignRecords/: 002-modularise-python-code
nested/test/resources/: daily_cause_list_mixed.html
nested/test/utils/: test_time_converter.py
plans/: TODO.md  court_case_class_diagram.puml
project_notes/: AI_progress_eval.md  LegitimateInterestsAssessment.md
scripts/: run-scraper.sh
(+23 files in other folders)
